--- a/Blik Mac/Base.lproj/MainMenu.xib
+++ b/Blik Mac/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -103,13 +103,13 @@ DQ
                             <menuItem title="Delete Project Permanently…" id="K4Z-7H-ScL">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
-                                    <action selector="workOnActiveProjectNow:" target="-1" id="9ZP-fP-39w"/>
+                                    <action selector="deleteViewedProject:" target="-1" id="Riz-cy-UXC"/>
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="4t1-vK-tMY"/>
                             <menuItem title="Now" keyEquivalent="0" id="nqk-On-ocM">
                                 <connections>
-                                    <action selector="goToToday:" target="-1" id="W9P-UV-Nvg"/>
+                                    <action selector="goToNowProject:" target="-1" id="OWA-PN-QMf"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="All Projects" keyEquivalent="1" id="lyC-ZA-xy1">
