--- a/Blik Mac/GLAAddNewCollectionViewController.xib
+++ b/Blik Mac/GLAAddNewCollectionViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLAAddNewCollectionViewController">
@@ -70,7 +70,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="y1p-bF-gca">
-                    <rect key="frame" x="213" y="131" width="76" height="23"/>
+                    <rect key="frame" x="212" y="131" width="76" height="23"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23" id="f0K-s8-zD7"/>
                     </constraints>
@@ -95,8 +95,9 @@
                 <constraint firstItem="765-VU-j1R" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vCb-Py-Wb1" secondAttribute="leading" constant="20" id="7ug-1e-cxY"/>
                 <constraint firstItem="SJ2-69-dck" firstAttribute="top" secondItem="y1p-bF-gca" secondAttribute="bottom" constant="8" id="Bc3-hR-5aY"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="765-VU-j1R" secondAttribute="trailing" constant="20" id="OBQ-gL-GEY"/>
-                <constraint firstItem="y1p-bF-gca" firstAttribute="centerX" secondItem="SJ2-69-dck" secondAttribute="centerX" constant="0.5" id="RkY-GB-bLA"/>
+                <constraint firstItem="y1p-bF-gca" firstAttribute="centerX" secondItem="SJ2-69-dck" secondAttribute="centerX" id="RkY-GB-bLA"/>
                 <constraint firstAttribute="bottom" secondItem="7Fn-gf-0Un" secondAttribute="bottom" constant="32" id="bUw-RZ-k0C"/>
+                <constraint firstItem="7Fn-gf-0Un" firstAttribute="top" relation="greaterThanOrEqual" secondItem="SJ2-69-dck" secondAttribute="bottom" constant="10" id="eZG-EY-6Gz"/>
                 <constraint firstAttribute="centerY" secondItem="765-VU-j1R" secondAttribute="centerY" constant="50" id="ixi-we-Lfj"/>
                 <constraint firstAttribute="centerX" secondItem="7Fn-gf-0Un" secondAttribute="centerX" id="jIN-yX-hcC"/>
                 <constraint firstAttribute="centerX" secondItem="SJ2-69-dck" secondAttribute="centerX" id="lQv-U9-faO"/>
