--- a/Blik Mac/GLAEmptyAllProjectsViewController.xib
+++ b/Blik Mac/GLAEmptyAllProjectsViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLAEmptyAllProjectsViewController">
@@ -18,11 +18,11 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4LR-Ek-xhw">
-                    <rect key="frame" x="98" y="113" width="304" height="46"/>
+                    <rect key="frame" x="78" y="113" width="344" height="46"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="300" id="alb-Bm-Xii"/>
+                        <constraint firstAttribute="width" constant="340" id="alb-Bm-Xii"/>
                     </constraints>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Create projects using the + in the top right corner. They will all be listed here." id="GbU-JP-EXc">
+                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Create new projects by clicking + in the top right corner. They will all be listed here." id="GbU-JP-EXc">
                         <font key="font" size="13" name="AvenirNext-Medium"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
