--- a/Blik Mac/GLANoNowProjectViewController.xib
+++ b/Blik Mac/GLANoNowProjectViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLANoNowProjectViewController">
@@ -18,11 +18,11 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" misplaced="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yoq-Cf-9Lp">
-                    <rect key="frame" x="101" y="113" width="298" height="46"/>
+                    <rect key="frame" x="93" y="102" width="314" height="69"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="300" id="zYl-ND-qcC"/>
+                        <constraint firstAttribute="width" constant="310" id="zYl-ND-qcC"/>
                     </constraints>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Create a project using the + in the top right, and click ‘Work On Now’ to have it appear here." id="1s9-GN-TMk">
+                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Create a project using the + in the top right corner, then click ‘Work On Now’ to have it appear here." id="1s9-GN-TMk">
                         <font key="font" size="13" name="AvenirNext-Medium"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
