--- a/Blik Mac/GLAProjectViewController.xib
+++ b/Blik Mac/GLAProjectViewController.xib
@@ -393,7 +393,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kal-bU-mMW">
-                    <rect key="frame" x="18" y="65" width="214" height="69"/>
+                    <rect key="frame" x="18" y="86" width="214" height="69"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="210" id="OhI-J3-OPk"/>
                     </constraints>
@@ -404,7 +404,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="M4I-tR-hcL">
-                    <rect key="frame" x="157" y="142" width="75" height="25"/>
+                    <rect key="frame" x="157" y="163" width="75" height="25"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Highlights" id="qb6-Ko-72d">
                         <font key="font" size="15" name="AvenirNext-MediumItalic"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -415,7 +415,7 @@
             <constraints>
                 <constraint firstItem="M4I-tR-hcL" firstAttribute="trailing" secondItem="kal-bU-mMW" secondAttribute="trailing" id="2Bu-V5-OeW"/>
                 <constraint firstItem="kal-bU-mMW" firstAttribute="top" secondItem="M4I-tR-hcL" secondAttribute="bottom" constant="8" id="BEq-UC-XU5"/>
-                <constraint firstAttribute="centerY" secondItem="kal-bU-mMW" secondAttribute="centerY" id="NyD-na-nvt"/>
+                <constraint firstAttribute="centerY" secondItem="kal-bU-mMW" secondAttribute="centerY" constant="21" id="NyD-na-nvt"/>
                 <constraint firstItem="kal-bU-mMW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="OZm-di-0Uz" secondAttribute="leading" constant="20" id="bMe-hd-luO"/>
                 <constraint firstAttribute="trailing" secondItem="kal-bU-mMW" secondAttribute="trailing" constant="20" symbolic="YES" id="e3h-pu-8iC"/>
             </constraints>
@@ -508,7 +508,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                         <tableColumns>
-                            <tableColumn width="297" minWidth="40" maxWidth="3000" id="9CY-vT-0i1">
+                            <tableColumn width="287" minWidth="40" maxWidth="3000" id="9CY-vT-0i1">
                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                     <font key="font" metaFont="smallSystem"/>
                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -525,7 +525,7 @@
                                         <rect key="frame" x="1" y="1" width="297" height="36"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" allowsExpansionToolTips="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wvd-37-nRU">
+                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" allowsExpansionToolTips="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wvd-37-nRU">
                                                 <rect key="frame" x="-2" y="7" width="257" height="23"/>
                                                 <textFieldCell key="cell" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="right" title="Table View Cell" id="3JX-zC-0E5">
                                                     <font key="font" size="13" name="AvenirNext-Medium"/>
