--- a/Blik Mac/GLAAddNewProjectViewController.xib
+++ b/Blik Mac/GLAAddNewProjectViewController.xib
@@ -37,7 +37,7 @@
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23" id="8lc-Ju-BES"/>
                     </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Enter the project’s name:" id="cdD-am-Ppd">
-                        <font key="font" size="13" name="AvenirNext-Medium"/>
+                        <font key="font" size="13" name="AvenirNext-MediumItalic"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
