Made create new project and collection main buttons click when return is hit. Fixed crash with animating buttons in GLAFileCollectionViewController. Fixed window ‘active’ alpha change when main, not key.

--- a/Blik Mac/GLAAddNewProjectViewController.xib
+++ b/Blik Mac/GLAAddNewProjectViewController.xib
@@ -50,6 +50,9 @@
                     <buttonCell key="cell" type="square" title="Create New Project" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="76A-4U-2pS" customClass="GLAButtonCell">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" size="16" name="AvenirNext-Medium"/>
+                        <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
                     </buttonCell>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
