--- a/Blik Mac/GLAAddNewCollectionViewController.xib
+++ b/Blik Mac/GLAAddNewCollectionViewController.xib
@@ -52,6 +52,9 @@
                     <buttonCell key="cell" type="square" title="Create New Collection" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ZcA-6n-lUi" customClass="GLAButtonCell">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" size="16" name="AvenirNext-Medium"/>
+                        <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
                     </buttonCell>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="verticalOffsetDown">
